--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "firebase": "^6.3.5",
     "lodash": "^4.17.15",
     "nuxt": "^2.8.0",
+    "ts-node": "^8.3.0",
     "twitter-text": "^3.0.0",
-    "vue-material-design-icons": "^3.3.1"
+    "vue-material-design-icons": "^3.3.1",
+    "vue-property-decorator": "^8.2.1"
   },
   "devDependencies": {
+    "@nuxt/typescript": "^2.8.1",
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/style-resources": "^1.0.0",
